# seia

./: .gitignore  README.org  index.html  status.html
doc/: store.org
hs/: CHANGELOG.md  default.nix  release.nix  seia.cabal  shell.nix
hs/jsbits/: mqtt.min.js  rust_crypto_ed25519_full.js  sha512.js  sha512_glue.js
hs/nix/: bimap_0_3_3.nix  chronos.nix  constraints-extras.nix  dependent-map.nix  dependent-sum-template.nix  dependent-sum.nix  monoidal-containers.nix  overrides.nix  reflex-basic-host.nix  reflex-dom-core_0_5_2.nix  reflex_0_6_2_4.nix  semialign.nix  these-lens.nix  typerep-map_0_3_2.nix  witherable_0_3.nix
hs/src/: Main.hs
hs/src/SHLUG/Seia/: Conf.hs  Helper.hs  Log.hs  Msg.hs  Rt.hs  Service.hs  Type.hs
hs/src/SHLUG/Seia/Msg/: Envelope.hs  Payload.hs
hs/src/SHLUG/Seia/Network/: Conn.hs  ConnMan.hs  MQTT.hs  Route.hs
hs/src/SHLUG/Seia/Service/: Status.hs  Version.hs
js/: node-packages.nix  overrides.nix  package-lock.json  package.json
js/src/: _tweetnacl.js  _tweetnacl.wasm  co.sh  exec.js  fdom.js  index.js  loader.js  rt.js  rust_crypto_ed25519.js  rust_crypto_ed25519_bg.wasm  store-fs.js  store-idb.js  store.js  t.js  t1.js  t_c  tweetnacl.js
js/src/c_ext/: t.c  tweetnacl.c  tweetnacl.c.modi  tweetnacl.h  tweetnacl.h.modi
test/: index.html  seia-preload.js
