cabal-version:       2.0

name:                seia
version:             0.2.0.0
license:             GPL-3
license-file:        LICENSE

author:              Yu Changyuan
maintainer:          reivzy@gmail.com

category:            Web

build-type:          Simple

extra-source-files:  CHANGELOG.md


executable seia
  main-is:             Main.hs
  other-modules:       SHLUG.Seia.Conf SHLUG.Seia.Rt SHLUG.Seia.Type
  other-extensions:    ScopedTypeVariables

  build-depends:       base ^>=4.12.0.0, bytestring ^>=0.10.8.2, 
                       transformers, mtl,
                       text, lens, time,
                       aeson, containers,
                       exceptions,
                       eccrypto,
                       jsaddle, ghcjs-dom,
                       ghcjs-prim, ghcjs-base,
                       reflex, reflex-dom-core, reflex-basic-host,
                       utf8-string, unicode-show, base32-z-bytestring,
                       binary, random, co-log, co-log-core

  hs-source-dirs:      src
  js-sources:   jsbits/sha512.js
                jsbits/sha512_glue.js
                jsbits/mqtt.min.js

  default-language:    Haskell2010

